<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">HearMe</string>
    <string name="mobicomkit_label">HearMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Chat using Fragment </string>
    <string name="title_section3">Messages</string>
    <string name="title_section4">ECommerce</string>
    <string name="title_section5">Messages (Activity based)</string>
    <string name="title_section6">Messages</string>
    <string name="title_section7">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text">Test</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world test!</string>
    <string name="ecommerce">Applozic</string>
    <string name="user_id">devashish.mamgain@gmail.com</string>
    <string name="ecommerce_button1_text">Gadgets</string>
    <string name="ecommerce_button2_text">Home</string>
    <string name="ecommerce_button3_text">PC</string>
    <string name="ecommerce_button4_text">Bags</string>
    <string name="ecommerce_button5_text">Watches</string>
    <string name="ecommerce_button6_text">Mobiles</string>
    <string name="ecommerce_button7_text">Cars</string>
    <string name="ecommerce_button8_text">Games</string>
    <string name="ecommerce_button9_text">Music</string>
    <string name="ecommerce_ad_button">Post Free Ad</string>
    <string name="ecommerce_chat_button">Chat</string>
    <string name="ecommerce_ad_text">Free Advertise</string>
    <string name="ecommerce_text1">Demo screen to show messaging integration, tap on the Chat button below</string>
    <string name="application_key">hearme39f668e3692dfd6b80ebc068</string>
    <string name="support_phone_number">+918042028425</string>
    <string name="default_server_url">https://apps.applozic.com</string>
    <string name="default_mqtt_server_url">tcp://apps.applozic.com:1883</string>
    <string name="default_media_location_folder">HearMe</string>
    <string name="order_sample_button">Chat with seller</string>
    <string name="take_order_userid">ApplozicShop</string>
    <string name="initiate_chat_button_info">Start Chatting</string>
    <string name="enter_user_id_info">Please Enter UserId</string>
    <string name="empty_user_id_info">UserId is empty</string>

    <!-- support or admin  contact information ...please add details here  -->
    <string name="support_contact_display_name">AppLozic</string>
    <string name="initiate_chat_info">Initiate chat with user</string>
    <string name="support_contact_userId">applozic</string>
    <string name="support_contact_emailId">devashish@applozic.com</string>
    <string name="support_contact_number">918042028425</string>
    <string name="support_contact_image_url">R.drawable.ic_launcher</string>
    <string name="invite_message">Hey, check out Applozic -
        Plug &amp; Play Messaging: http://www.applozic.com</string>
    <string name="facebook_app_id">2194468880571702</string>
    <string name="intrest_in_chat">Hello I am interested in your property, Can we chat?</string>
    <string name="start">START</string>
    <string name="cancel">Cancel</string>
    <string name="TestTopic2">TestTopic2</string>
    <string name="Topic_1">Topic 1</string>
    <string name="Price">Price</string>
    <string name="Qty">Qty</string>
    <string name="rs">20 Rs</string>
    <string name="group_chat">Group chat</string>
    <string name="Please_download_the_Google_play_store_apk">Please download the Google play store apk</string>
    <string name="click_more">Cliquez plus</string>
    <string name="press_back_again_to_exit">Appuyez de nouveau sur Retour pour quitter.</string>
    <string name="log_out_successful">Log out successful</string>


    <!--
    Created  by NOZHA GH
    -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>

    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc"></string>

    <string name="slide_2_title"> </string>
    <string name="slide_2_desc"></string>

    <string name="slide_3_title"></string>
    <string name="slide_3_desc"></string>

    <string name="slide_4_title">Join us!</string>
    <string name="slide_4_desc"></string>
    <!-- Add for auth with firebase -->
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="send_sms_message">Please enter your mobile number.You will get a SMS including a verification code.</string>
    <string name="send_sms">send verifcation code</string>
    <string name="message">This App will send you an SMS message to verify your phone number. Kindly enter your phone Number</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="start_phone_auth">Start Verification</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="enter_verify_code">Enter SMS Code</string>
    <string name="success_message">You have successfully Logged in</string>
    <!-- Add for page login-->
    <string name="spinner_title">Choose a sign language</string>
    <string name="btn_accept">Accept and continue</string>
    <string name="welcome_msg">Welcome to HearMe</string>
    <string name="init">Initialization...</string>
    <string name="init_wait">Please wait</string>
    <string name="titleSignIn">Enter your phone number</string>
    <string name="VerifNumber">Verify phone number</string>
    <string name="textVerifNumber">Tap Next to verify your account with your phone number.</string>
    <string name="textConfirmCode">Enter the 6-digit code we sent to</string>
    <string name="confirmCode">continue</string>
    <string name="resendCode">Resend code</string>
    <string name="spinnerTags">Please fill in..</string>
    <string name="error_field_required">This field is required</string>
    <string name="text_alert">Alert</string>
    <string name="checkSpace">Required space not available</string>
    <string name="error_phone_invalid">Phone Number is Invalid</string>
    <string name="msg_confirm_exit">Are you sure you want to exit?</string>
    <string name="exit_btn">Yes</string>
    <string name="not_exit_btn">No</string>
    <string name="resend_msg">Your code has been re-sent</string>
    <string name="confirm_error">Invalid verification code, please try again.</string>





</resources>
